fix button on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,7 @@ a{
     font-size: 1.5rem;
     padding: 0.8rem 1.6rem;
     border: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover{
